--- a/galeri.html
+++ b/galeri.html
@@ -65,57 +65,110 @@
       </header><!-- End Header -->
   
     <main id="main">
-      <section id="contact" class="contact mb-5">
-        <div class="container" data-aos="fade-up">
-          <div class="row">
-            <div class="col-lg-12 text-center mb-5">
-              <h1 class="page-title">Galeri Wayang Kulit</h1>
-            </div>
-          </div>
+        <section id="gallery" class="gallery mb-5">
+            <div class="container" data-aos="fade-up">
+              <div class="row">
+                <div class="col-lg-12 text-center mb-5">
+                  <h1 class="page-title">Galeri Wayang Kulit</h1>
+                </div>
+              </div>
 
-          <div>
-            <div class="atas">
-              <img src="assets/img/wayang/wayang 1.png" alt="" />
-            </div>
-            <div class="row">
-              <div class="column yellow">
-                <img src="assets/img/gallery/wayang 3.png" alt="" />
+              <div class="satu">
+                <div class="row">
+                    <div class="col-lg-6 mb-4">
+                        <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="assets/img/wayang/wayang 1.png" class="d-block w-100" alt="Gambar 1">
+                                </div>
+                                <!-- Add more carousel items for additional images -->
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-md-6 mb-4">
+                                <div class="sub-image">
+                                    <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 2">
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="sub-image">
+                                    <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 3">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="sub-image">
+                                    <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 4">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="sub-image">
+                                    <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 5">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
               </div>
-              <div class="column orange">
-                <img src="assets/img/gallery/wayang 2.png" alt="" />
-              </div>
-              <div class="column green">
-                <img src="assets/img/gallery/wayang 2.png" alt="" />
-              </div>
-              <div class="column blue">
-                <img src="assets/img/gallery/wayang 3.png" alt="" />
-              </div>
-            </div>
-          </div>
 
-          <div class="dua">
-            <div class="atas">
-              <img src="assets/img/wayang/wayang 1.png" alt="" />
+                <div class="dua">
+                <div class="row">
+                  <div class="col-lg-6 mb-4">
+                      <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                  <img src="assets/img/wayang/wayang 1.png" class="d-block w-100" alt="Gambar 1">
+                              </div>
+                              <!-- Add more carousel items for additional images -->
+                          </div>
+                          <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                          </button>
+                          <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                          </button>
+                      </div>
+                  </div>
+                  <div class="col-lg-6">
+                      <div class="row">
+                          <div class="col-md-6 mb-4">
+                              <div class="sub-image">
+                                  <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 2">
+                              </div>
+                          </div>
+                          <div class="col-md-6 mb-4">
+                              <div class="sub-image">
+                                  <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 3">
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="sub-image">
+                                  <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 4">
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="sub-image">
+                                  <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 5">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
             </div>
-            <div class="row">
-              <div class="column yellow">
-                <img src="assets/img/gallery/wayang 3.png" alt="" />
-              </div>
-              <div class="column orange">
-                <img src="assets/img/gallery/wayang 2.png" alt="" />
-              </div>
-              <div class="column green">
-                <img src="assets/img/gallery/wayang 2.png" alt="" />
-              </div>
-              <div class="column blue">
-                <img src="assets/img/gallery/wayang 3.png" alt="" />
-              </div>
-            </div>
-          </div>
 
-          <!-- End Gallery -->
-        </div>
-      </section>
+            </div>
+        </section>
     </main>
     <!-- End #main -->
 
@@ -274,6 +327,35 @@
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.10.0/js/lightgallery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lg-zoom/1.0.1/lg-zoom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lg-fullscreen/1.0.1/lg-fullscreen.min.js"></script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var mainCarousel = new bootstrap.Carousel(document.getElementById('mainCarousel'), {
+            interval: false,
+            wrap: false
+        });
+
+        var subImages = document.querySelectorAll('.sub-image');
+        subImages.forEach(function (subImage) {
+            subImage.addEventListener('click', function () {
+                var index = Array.from(subImage.parentNode.children).indexOf(subImage);
+                mainCarousel.to(index);
+            });
+        });
+
+        var mainImage = document.getElementById('mainCarousel');
+        lightGallery(mainImage, {
+            selector: 'img',
+            download: false,
+            zoom: true,
+            fullScreen: true,
+            actualSize: true
+        });
+    });
+    </script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
