--- a/sign_up.html
+++ b/sign_up.html
@@ -38,30 +38,32 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="shadow-puppet-background">
-        <!-- Gambar latar belakang -->
-        <img src="assets/img/wayang/wayang5.png" alt="background-img">
+    <div class="back-button">
+        <i class="bi bi-chevron-left"></i>back
     </div>
+<div class="container">
     <div class="sign-up">
         <h1>SIGN UP</h1>
-              <form action="#">
-                  <div class="input-icon">
-                      <input type="text" id="username" name="username" placeholder="Enter Your Username">
-                      <input type="email" id="email" name="email" placeholder="Enter Your Email">
-                       <input type="password" id="password" name="password" placeholder="Enter Your  Password">
-                       <input type="verification_password" id="verification_password" name="password" placeholder="Enter Your Verification Password">
-                  </div>
-                 <div class="button-container">
-                        <button class="button1" type="reset">Reset</button>
-                        <button class="button2" type="submit">Register</button>
-                 </div>
-
-                  <a  href="sign_in.html">Sign In</a>
-              </form>
-
+        <form action="#">
+            <div class="input-icon">
+                <input type="text" id="username" name="username" placeholder="Enter Your Username">
+                <input type="email" id="email" name="email" placeholder="Enter Your Email">
+                <input type="password" id="password" name="password" placeholder="Enter Your Password">
+                <input type="verification_password" id="verification_password" name="verification_password" placeholder="Enter Your Verification Password">
+            </div>
+            <div class="button-container">
+                <button class="button1" type="reset">Reset</button>
+                <button class="button2" type="submit">Register</button>
+            </div>
+            <a class="a-sign-in" href="sign_in.html">Sign In</a>
+        </form>
+    </div>
+    <div class="shadow-puppet-background">
+        <!-- Gambar latar belakang -->
+        <img src="assets/img/wayang/wayang-signup.png" alt="background-img">
     </div>
 </div>
+
 
 
  
