--- a/komunitas.html
+++ b/komunitas.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Wayang Kulit - Beranda</title>
+    <title>Wayang Kulit - Komunitas</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
